--- a/src/app/centizen.component.css
+++ b/src/app/centizen.component.css
@@ -7,11 +7,18 @@ h1{
 }
 
 a{
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     background: #2ECFC7;
     color: white;
     text-decoration: none;
     border-radius: 12px;
     border: black solid 2px;
     margin-right: 20px;
+    margin-top: 20px;
+}
+
+.container{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
