Exadatum POC complete

--- a/src/app/centizen.component.css
+++ b/src/app/centizen.component.css
@@ -1,6 +1,6 @@
 h1{
     color: white;
-    background: #2ECFC7;
+    background: #1976d2;
     border-radius: 8px;
     margin-top: 0;
     padding: 10px;
