--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,76 @@
-/* You can add global styles to this file, and also import other style files */
+#source, #destination{
+    float: left;
+    height: 300px;
+    margin: 10px 0 10px 0;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+#destination{
+    width: 75%;
+}
+
+#source{
+    width: 15%;
+}
+
+#destination div{
+    display: inline-block;
+}
+
+.sidebar-item, .btn{
+    background-color: #1976d2;
+    border-radius: 5px;
+    color:white;
+    cursor: move;
+    padding: 8px;
+    width: 128px;
+    text-align: center;
+    margin: 10px;
+    outline: none;
+}
+.btn{
+    margin-left: 0px;
+}
+
+#destination .sidebar-item{
+    margin-right: 70px;
+    margin-top: 30px;
+}
+
+.dialog {
+    z-index: 1000;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    min-height: 100px;
+    width: 90%;
+    max-width: 520px;
+    background-color: #fff;
+    padding: 12px;
+    box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
+  }
+  
+  .modal-content{
+    margin-left: 10px;
+    color: #1976d2;
+  }
+
+  .modal-content input{
+    width: 50%;
+    height: 20px;
+    border-radius: 4px;
+    margin-top: 20px;
+    padding: 5px;
+  }
+
+  .app-modal-header{
+    padding: 10px;
+    background: #1b5288;
+    margin: -12px;
+    margin-left: -22px;
+    color: white;
+  }
